--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Custom styles for this template -->
     <link href="web/offcanvas.css" rel="stylesheet">
-    <!--    <link rel="icon" href="img/favicon.gif" type="image/gif">-->
+       <link rel="icon" href="Steganography2.png" type="image/png">
 
 <script>
 function initComparisons() {
@@ -114,8 +114,8 @@ function initComparisons() {
 
     </p>
     <div class="btn-group" role="group" aria-label="Top menu">
-        <a class="btn btn-primary" href="https://arxiv.org/abs/2205.15585">Paper</a>
-        <a class="btn btn-primary" href="https://github.com/pfnet-research/distilled-feature-fields">Code</a>
+        <a class="btn btn-primary" href="https://xggnet.github.io/StegaNeRF/">Paper</a>
+        <a class="btn btn-primary" href="https://github.com/XGGNet/StegaNeRF">Code</a>
     </div>
     <!--<p>
     <br>
@@ -174,6 +174,7 @@ function initComparisons() {
     We design an optimization framework allowing accurate hidden information extractions from images rendered by NeRF, while preserving its original visual quality.
     <br>
     We perform experimental evaluations of our method under several potential deployment scenarios, and we further discuss the insights discovered through our analysis.
+    <br>
     StegaNeRF signifies an initial exploration into the novel problem of instilling customizable, imperceptible, and recoverable information to NeRF renderings, with minimal impact to rendered images.
   
 <!-- Emerging neural radiance fields (<a href="https://www.matthewtancik.com/nerf">NeRF</a>) are a promising scene representation for computer graphics, enabling high-quality 3D reconstruction and novel view synthesis from image observations.
@@ -197,7 +198,7 @@ Our experiments validate that the <i>distilled feature fields (DFFs)</i> can tra
     <img src="elements/images/MOTIVATION_V2.svg"
     style="width:65%; margin-right:0px; margin-top:-0px;">
 
-    <div style="width: 32%; float: right; margin-top:-150px">
+    <div style="width: 32%; float: right; margin-top:-170px">
 <video class="video" autoplay="true" loop="true" style="width: 100%;" autoplay muted>
  <source src="web/web-teaser.mp4">
 </video>
@@ -567,6 +568,17 @@ Our experiments validate that the <i>distilled feature fields (DFFs)</i> can tra
 </textarea> -->
       </div>
     </div>
+
+    <!-- <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+          <h3>
+              Acknowledgements
+          </h3>
+          <p class="text-justify">
+          The website template was borrowed from <a href="https://pfnet-research.github.io/distilled-feature-fields/">distilled-feature-fields</a>.
+          </p>
+      </div>
+  </div> -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
