--- a/index.html
+++ b/index.html
@@ -547,10 +547,22 @@ Our experiments validate that the <i>distilled feature fields (DFFs)</i> can tra
     <div class="section">
       <h2>Video</h2>
       <div class="publication-video">
-        <iframe src="https://youtu.be/sFdZU2dpqUw"
-                frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+        <iframe width="1008" height="567" src="https://www.youtube-nocookie.com/embed/sFdZU2dpqUw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        
+        <!-- <iframe src="https://youtu.be/sFdZU2dpqUw"
+                frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
       </div>
   </div>
+
+  <!-- <div class="video">
+    <h2 class="section-title">Video</h2>
+    <div class="video-container" style="margin-top: 50px;">
+        <iframe width="1440" height="651" src="https://www.youtube.com/embed/jQGIb6c_VK4" title="PRIF: Primary Ray-based Implicit Function" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                </div> 
+    <br>
+    Video
+</div> -->
+
 
     <br>
         <div class="section">
