--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ Our experiments validate that the <i>distilled feature fields (DFFs)</i> can tra
      <div style="max-width: 25%">
        <!-- <h5 align="center">Recovered Information</h5> -->
              <video class="video" autoplay="true" loop="true" style="margin-top: -1rem;" autoplay muted>
-               <source src="videos/fern_rec.mp4">
+               <source src="videos/fern_rec_resize.mp4">
              </video>
      </div>
    </div>	
@@ -409,7 +409,7 @@ Our experiments validate that the <i>distilled feature fields (DFFs)</i> can tra
     <div style="max-width: 25%">
       <!-- <h5 align="center">Recovered Information</h5> -->
             <video class="video" autoplay="true" loop="true" style="margin-top: -1rem;" autoplay muted>
-              <source src="videos/flower_rec.mp4">
+              <source src="videos/flower_rec_resize.mp4">
             </video>
     </div>
   </div>	
@@ -438,7 +438,7 @@ Our experiments validate that the <i>distilled feature fields (DFFs)</i> can tra
     <div style="max-width: 25%">
       <!-- <h5 align="center">Recovered Information</h5> -->
             <video class="video" autoplay="true" loop="true" style="margin-top: -1rem;" autoplay muted>
-              <source src="videos/fortress_rec.mp4">
+              <source src="videos/fortress_rec_resize.mp4">
             </video>
     </div>
   </div>	
@@ -453,21 +453,81 @@ Our experiments validate that the <i>distilled feature fields (DFFs)</i> can tra
       <p>
         Applying our StegaNeRF pipeline to embed multi-modal information. Please see the video below for detailed exhibition. 
       </p>
+
+      <div style="display: flex; padding: 0px">
+        <div style="max-width: 25%">
+          <!-- <h5 align="center">Rendering Views</h5> -->
+                <video class="video" autoplay="true" loop="true" style="margin-top: -1rem;" autoplay muted>
+                  <source src="multi-modal/trex_ren.mp4">
+                </video>
+        </div>
+        <div style="max-width: 25%">
+          <!-- <h5 align="center">Residual Error (x5)</h5> -->
+                <video class="video" autoplay="true" loop="true" style="margin-top: -1rem;" autoplay muted>
+                  <source src="multi-modal/trex_res.mp4">
+                </video>
+        </div>
+        <div style="max-width: 25%">
+          <!-- <h5 align="center">Residual Error (x25)</h5> -->
+                <video class="video" autoplay="true" loop="true" style="margin-top: -1rem;" autoplay muted>
+                  <source src="multi-modal/trex_rec.mp4">
+                </video>
+        </div>
+        <div style="max-width: 25%">
+          <!-- <h5 align="center">Recovered Information</h5> -->
+                <!-- <video class="video" autoplay="true" loop="true" style="margin-top: -1rem;" autoplay muted>
+                  <source src="videos/fortress_rec_resize.mp4">
+                </video> -->
+                <img style="width:100%;" src="multi-modal/图片1.png">
+        </div>
+      </div>	
+
+      <div style="display: flex; padding: 0px">
+        <div style="max-width: 25%">
+          <!-- <h5 align="center">Rendering Views</h5> -->
+                <video class="video" autoplay="true" loop="true" style="margin-top: -1rem;" autoplay muted>
+                  <source src="multi-modal/horns_ren.mp4">
+                </video>
+        </div>
+        <div style="max-width: 25%">
+          <!-- <h5 align="center">Residual Error (x5)</h5> -->
+                <video class="video" autoplay="true" loop="true" style="margin-top: -1rem;" autoplay muted>
+                  <source src="multi-modal/horns_res.mp4">
+                </video>
+        </div>
+        <div style="max-width: 25%">
+          <!-- <h5 align="center">Residual Error (x25)</h5> -->
+                <video class="video" autoplay="true" loop="true" style="margin-top: -1rem;" autoplay muted>
+                  <source src="multi-modal/horns_rec.mp4">
+                </video>
+        </div>
+        <div style="max-width: 25%">
+          <!-- <h5 align="center">Recovered Information</h5> -->
+                <!-- <video class="video" autoplay="true" loop="true" style="margin-top: -1rem;" autoplay muted>
+                  <source src="videos/fortress_rec_resize.mp4">
+                </video> -->
+                <img style="width:100%;" src="multi-modal/图片2.png">
+        </div>
+      </div>	
+
+
+
+<!-- 
         <img  style="width:25%;" src="multi-modal/trex_ren.gif"> &nbsp &nbsp&nbsp
       <img style="width:25%;" src="multi-modal/trex_res.gif"> &nbsp &nbsp&nbsp
       <img style="width:18%;" src="multi-modal/trex_rec.gif"> &nbsp &nbsp&nbsp
-       <img style="width:23%;" src="multi-modal/图片1.png">
+       <img style="width:23%;" src="multi-modal/图片1.png"> -->
   
-       <br><br>
+       <br>
       <!-- <figcaption>  &nbsp &nbsp Rendering Views &nbsp &nbsp &nbsp  Residual Error (x5).  &nbsp &nbsp &nbsp &nbsp   Residual Error (x25).  &nbsp &nbsp  Recovered Customized I
       </figcaption> -->
   
-      <img  style="width:25%;" src="multi-modal/horns_ren.gif"> &nbsp &nbsp&nbsp
+      <!-- <img  style="width:25%;" src="multi-modal/horns_ren.gif"> &nbsp &nbsp&nbsp
       <img style="width:25%;" src="multi-modal/horns_res.gif"> &nbsp &nbsp&nbsp
       <img style="width:18%;" src="multi-modal/horns_rec.gif"> &nbsp &nbsp&nbsp
        <img style="width:23%;" src="multi-modal/图片2.png">
 
-       <br><br>
+       <br><br> -->
 <!--   
        <img style="width:23%;" src="videos/fortress_ren.gif"> &nbsp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 
        <img style="width:23%;" src="videos/fortress_res5.gif"> &nbsp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
