--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ Our experiments validate that the <i>distilled feature fields (DFFs)</i> can tra
     <div class="section">
       <h3>Multi-Modal Steganography</h3>
       <p>
-        Applying our StegaNeRF pipeline to embed multi-modal information. Please see the video below for detailed exhibition. 
+        Applying our StegaNeRF pipeline to embed multi-modal information. Please see the video below for the detailed exhibition. 
       </p>
 
       <br>
