--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@ Our experiments validate that the <i>distilled feature fields (DFFs)</i> can tra
        <img style="width:23%;" src="videos/fortress_res.gif"> &nbsp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
         <img style="width:17%;" src="videos/fortress_rec.gif">
    -->
-      <figcaption>  &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp  StegaNeRF Renderings &nbsp &nbsp&nbsp &nbsp&nbsp &nbsp &nbsp Residual v.s. Initial Renderings (x25) &nbsp &nbsp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Image Recovery  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Multi-Moda (audio&text) Recovery
+      <figcaption>  &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp  StegaNeRF Renderings &nbsp &nbsp&nbsp &nbsp&nbsp &nbsp &nbsp Residual v.s. Initial Renderings (x25) &nbsp &nbsp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Image Recovery  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Multi-Modal (audio&text) Recovery
       </figcaption>
 
       <br>
