--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ function trackLocation(e) {
 <div style="width: 99%" class="container">
   <div>
     <video class="video" autoplay="true" loop="true" style="width: 90%;" autoplay muted>
-      <source src="web/web-teaser.mp4">
+      <source src="web/web-teaser2.mp4">
     </video>
   </div>
   <div style="text-align: center;">
@@ -183,8 +183,8 @@ function trackLocation(e) {
   <div class="section">
       <h2>Results</h2>
       <h3>Single-Scene Steganography</h3>
-      <p>
-        Applying StegaNeRF on single-scene NeRF training. The hidden information embedded in the rendering can be revealed by the residual error (against standard NeRF without steganographic training). Across all the rendering viewpoints, the same hidden information is robustly recovered , with only very slight variations.        </p>
+      <p>Applying StegaNeRF on single-scene NeRF training. </p>
+      <p align="left">The hidden information are embedded in the rendering and can be revealed through visualizing the residual error against the rendering produced by a standard NeRF without steganographic training. Across all the rendering viewpoints, the same hidden information is robustly recovered, with only very slight variations.</p>
     <br>
 
       <div style="display: flex; padding: 0px">
