update arxiv link

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ function trackLocation(e) {
 
 
     <div class="btn-group" role="group" aria-label="Top menu">
-        <a class="btn btn-primary" href="https://xggnet.github.io/StegaNeRF/">Paper</a>
+        <a class="btn btn-primary" href="https://arxiv.org/abs/2212.01602">Paper</a>
         <a class="btn btn-primary" href="https://github.com/XGGNet/StegaNeRF">Code</a>
     </div>
 </div>
