--- a/index.html
+++ b/index.html
@@ -100,19 +100,19 @@ function trackLocation(e) {
         <div class="w-col w-col-1">
         </div>
         <div class="w-col w-col-2">
-          <h1 class="nerf_affiliation_v2">Hong Kong Polytechnic University</h1>
+          <!-- <h1 class="nerf_affiliation_v2">Hong Kong Polytechnic University</h1> -->
         </div>
         <div class="w-col w-col-2">
-          <h1 class="nerf_affiliation_v2">University of Maryland</h1>
+          <!-- <h1 class="nerf_affiliation_v2">University of Maryland</h1> -->
         </div>
         <div class="w-col w-col-2">
-          <h1 class="nerf_affiliation_v2">University of Texas at Austin</h1>
+          <!-- <h1 class="nerf_affiliation_v2">University of Texas at Austin</h1> -->
         </div>
         <div class="w-col w-col-2">
-          <h1 class="nerf_affiliation_v2">ByteDance</h1>
+          <!-- <h1 class="nerf_affiliation_v2">ByteDance</h1> -->
         </div>
         <div class="w-col w-col-2">
-          <h1 class="nerf_affiliation_v2">University of Texas at Austin</h1>
+          <!-- <h1 class="nerf_affiliation_v2">University of Texas at Austin</h1> -->
         </div>
         <div class="w-col w-col-1">
         </div>
